--- a/index.html
+++ b/index.html
@@ -50,55 +50,55 @@
     </header>
     <main class="">
         <!-- Our Plant Section -->
-        <section class="w-4/5 mx-auto my-28">
-            <div class="text-center w-1/2 mx-auto">
+        <section class="w-4/5 max-sm:w-[90%] max-sm:mx-6  mx-auto max-sm:my-2 my-28">
+            <div class="text-center w-1/2 max-sm:w-full mx-auto">
                 <h3 class="text-5xl font-bold font-noto"><span class="text-[#E95A08]">Our</span> Plants</h3>
                 <p class="text-[#00000080] text-center mt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
-            <div class="grid grid-cols-4">
-                <div class="card w-68 h-auto text-center mt-10">
+            <div class="grid justify-items-center max-sm:grid-cols-2 grid-cols-4">
+                <div class="card w-68 max-sm:w-60 h-auto text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 text-center mt-10">
+                <div class="card w-68 max-sm:w-60 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
