--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
             </div>
         </section>
         <!-- Plants Lover Section -->
-        <section class="w-4/5 mx-auto flex mt-40 justify-between">
+        <section class="w-4/5 mx-auto flex max-sm:flex-col mt-40 justify-between">
             <div class="w4/5 relative">
-                <img class="absolute w-60 h-60 -right-24 -top-22" src="assets/trusted-badge.png" alt="Trusted-Badge">
+                <img class="absolute max-sm:hidden w-60 h-60 -right-24 -top-22" src="assets/trusted-badge.png" alt="Trusted-Badge">
                 <img src="assets/flower-store.png" alt="flower-image">
             </div>
-            <div class="w-1/2 my-8">
+            <div class="w-1/2 max-sm:w-full my-8">
                 <h3 class="font-noto text-5xl font-bold">Flower & Plants <br> Lover</h3>
                 <ul class="list-disc flex flex-col gap-3 mt-8 ml-12">
                     <li class="text-[#00000080] font-normal text-[22px]">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
