Latest Deal Section Responsive Done

--- a/index.html
+++ b/index.html
@@ -124,31 +124,31 @@
         </section>
         <!-- Latest Deal Section -->
          <section class="w-4/5 mx-auto mt-40 mb-40">
-            <div class="text-center w-1/2 mx-auto">
+            <div class="text-center w-1/2 max-sm:w-full mx-auto">
                 <h3 class="font-noto text-5xl font-bold"><span class="text-[#E95A08]">Latest</span>  Deals</h3>
                 <p class="text-[#00000080] mt-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
-            <div class="flex gap-8 mt-25">
+            <div class="flex max-sm:flex-col gap-8 mt-25">
                 <div class="flex flex-col gap-6">
                     <div class="relative">
                         <div class="absolute w-full h-full text-center flex flex-col justify-center z-10">
-                            <p class="text-white font-bold">60% Off | Bloom Plant</p>
-                            <p class="text-white font-bold underline">Shop Now</p>
+                            <p class="text-white max-sm:text-3xl font-bold">60% Off | Bloom Plant</p>
+                            <p class="text-white max-sm:text-3xl font-bold underline">Shop Now</p>
                         </div>
-                        <img class="rounded-xl brightness-70" src="assets/deal-bloom.png" alt="">
+                        <img class="rounded-xl max-sm:w-full brightness-70" src="assets/deal-bloom.png" alt="">
                     </div>
                     <div class="relative">
                         <div class="absolute w-full h-full text-center flex flex-col justify-center z-10">
-                            <p class="text-white font-bold">30% Off | Ana Plant</p>
-                            <p class="text-white font-bold underline">Shop Now</p>
+                            <p class="text-white max-sm:text-3xl font-bold">30% Off | Ana Plant</p>
+                            <p class="text-white max-sm:text-3xl font-bold underline">Shop Now</p>
                         </div>
-                        <img class="rounded-xl brightness-70" src="assets/deal-ana.png" alt="">
+                        <img class="rounded-xl max-sm:w-full brightness-70" src="assets/deal-ana.png" alt="">
                     </div>
                 </div>
                 <div class="relative">
                     <div class="absolute w-full h-full text-center flex flex-col justify-center z-10">
-                        <p class="text-white font-noto font-bold text-5xl font-bold">30% Off | Ana Plant</p>
-                        <p class="text-white font-noto font-bold text-5xl font-bold underline">Shop Now</p>
+                        <p class="text-white font-noto max-sm:text-3xl text-5xl font-bold">30% Off | Ana Plant</p>
+                        <p class="text-white font-noto max-sm:text-3xl text-5xl font-bold underline">Shop Now</p>
                     </div>
                     <img class="rounded-xl brightness-70" src="assets/deal-zabo.png" alt="">
                 </div>
