Join Section Responsive Done

--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
          </section>
          <!-- Join Section -->
          <section class="w-full">
-            <div class="relative">
+            <div class="relative max-sm:h-96">
                 <div class="absolute w-full h-full text-center flex flex-col justify-center z-10">
-                    <p class="text-white font-noto font-bold text-5xl">Join the colorful Bunch</p>
+                    <p class="text-white font-noto font-bold text-5xl max-sm:text-3xl">Join the colorful Bunch</p>
                     <div class="mt-10">
                         <input class="bg-white pl-5 w-1/2 h-12" type="text" name="" id="" placeholder="Write email">
                         <input class="bg-orange-500 text-white w-30 h-12 -ml-1" type="button" value="Subscribe">
                     </div>
                 </div>
-                <img class="w-full brightness-90" src="assets/news-letter-bg.png" alt="">
+                <img class="w-full max-sm:h-96 brightness-90" src="assets/news-letter-bg.png" alt="">
             </div>
          </section>
     </main>
