--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body class="font-[Inter]">
-    <header class="w-4/5 mx-auto my-7">
+    <header class="w-4/5 max-sm:w-[90%] mx-auto my-7">
         <!-- Navbar Section -->
         <nav class="flex flex-row justify-between items-center">
             <div class="flex items-center mb-4 md:mb-0">
@@ -56,49 +56,49 @@
                 <p class="text-[#00000080] text-center mt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div class="grid justify-items-center max-sm:grid-cols-2 grid-cols-4">
-                <div class="card w-68 max-sm:w-60 h-auto text-center mt-10">
+                <div class="card w-68 max-sm:w-50 h-auto text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
                     <button class="bg-orange-500 font-semibold text-white py-3 mt-6 w-full">ADD TO CART</button>
                 </div>
-                <div class="card w-68 max-sm:w-60 text-center mt-10">
+                <div class="card w-68 max-sm:w-50 text-center mt-10">
                     <img src="assets/sample-flower-image.png" alt="Flower">
                     <p class="mt-5 font-medium text-lg">Lily Blossom</p>
                     <p class="text-lg font-bold">20 USD</p>
@@ -108,7 +108,7 @@
             </div>
         </section>
         <!-- Plants Lover Section -->
-        <section class="w-4/5 mx-auto flex max-sm:flex-col mt-40 justify-between">
+        <section class="w-4/5 max-sm:w-[90%] mx-auto flex max-sm:flex-col mt-40 justify-between">
             <div class="w4/5 relative">
                 <img class="absolute max-sm:hidden w-60 h-60 -right-24 -top-22" src="assets/trusted-badge.png" alt="Trusted-Badge">
                 <img src="assets/flower-store.png" alt="flower-image">
@@ -123,7 +123,7 @@
             </div>
         </section>
         <!-- Latest Deal Section -->
-         <section class="w-4/5 mx-auto mt-40 mb-40">
+         <section class="w-4/5  max-sm:w-[90%] mx-auto mt-40 mb-40">
             <div class="text-center w-1/2 max-sm:w-full mx-auto">
                 <h3 class="font-noto text-5xl font-bold"><span class="text-[#E95A08]">Latest</span>  Deals</h3>
                 <p class="text-[#00000080] mt-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -169,13 +169,13 @@
          </section>
     </main>
     <footer class="my-15">
-        <section class="w-4/5 flex sm:flex flex-col justify-between mx-auto">
-            <div class="w-1/4">
+        <section class="w-4/5 max-sm:w-[90%] flex max-sm:flex-col justify-between mx-auto">
+            <div class="w-1/4 max-sm:w-full">
                 <img src="assets/logo.png" alt="Footer Logo">
-                <p class="text-[#00000080] mt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+                <p class="text-[#00000080] max-sm:text-2xl mt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
             </div>
-            <div>
-                <ul class="text-[#00000080] flex flex-col gap-5">
+            <div class="max-sm:mt-4">
+                <ul class="text-[#00000080]  max-sm:text-2xl flex flex-col gap-5">
                     <li>Home</li>
                     <li>About Us</li>
                     <li>Blog</li>
@@ -183,8 +183,8 @@
                     <li>Contact Us</li>
                 </ul>
             </div>
-            <div>
-                <ul class="text-[#00000080] flex flex-col gap-5">
+            <div class="max-sm:mt-4">
+                <ul class="text-[#00000080] max-sm:text-2xl flex flex-col gap-5">
                     <li>Features</li>
                     <li>Pricing</li>
                     <li>Privacy Policy</li>
@@ -192,7 +192,7 @@
                     <li>Help Center</li>
                 </ul>
             </div>
-            <div>
+            <div class="max-sm:mt-4">
                 <ul class="flex justify-between items-center gap-8">
                     <li><img src="assets/icon-linkedin.png" alt=""></li>
                     <li><img src="assets/icon-twitter.png" alt=""></li>
